More Law Decisions

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -11,7 +11,6 @@
  RAJ_indian_railways_concern:0 "Indian Railways"
  RAJ_imperial_bank_of_india_concern:0 "Imperial Bank of India"
  RAJ_imperial_bank_of_india_trait:0 "Imperial Bank"
- unlock_imperial_bank_of_india.tt:0 "Unlocks §YIndustrial Concern§!: §YImperial Bank of India§!"
  
  # MIOs
  ordnance_factories_board_infantry:0 "Ordnance Factory Board (Infantry Eq.)"
@@ -580,8 +579,24 @@
  RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
 
  # Social Reforms
+ RAJ_social_reforms_category:0 "Social Reforms"
+
  RAJ_wild_birds_and_animals_protection_act:0 "Wilds Birds and Animals Protection Act"
+ RAJ_wild_birds_and_animals_protection_act_reward:0 "Modify '§YSocial Reforms§!' by:\nPolitical Power Gain:§G +4%§!\nRessource Gain Efficiency:§R -2.00%§!"
+ RAJ_wild_birds_and_animals_protection_act_reward_2:0 "Add '§YSocial Reforms§!', which grants ( Political Power Gain:§G +4%§!, Ressource Gain Efficiency:§R -2.00%§!)."
+
  RAJ_destructive_insects_and_pests_act:0 "Destructive Insects and Pests Act"
+ RAJ_destructive_insects_and_pests_act_reward:0 "Modify '§YSocial Reforms§!' by:\nConsumer Goods Factories Factor:§Y -2.0%§!\nConstruction Speed:§G +4.00%§!"
+ RAJ_destructive_insects_and_pests_act_reward_2:0 "Add '§YSocial Reforms§!', which grants ( Consumer Goods Factories Factor:§Y -2.0%§!, Construction Speed:§G +4.00%§!)."
+
+ RAJ_cooperative_societies_act:0 "Cooperative Societies Act"
+ RAJ_cooperative_societies_act_reward:0 "Modify '§YSocial Reforms§!' by:\nFactory Output:§G +5.00%§!"
+
+ RAJ_official_trustees_act:0 "Official Trustees Act"
+ RAJ_official_trustees_act_reward:0 "Modify '§YSocial Reforms§!' by:\nPolitical Power Gain:§G +4%§!\nStability:§G +2.00%§!"
+
+ RAJ_white_phosphorus_matches_prohibition_act:0 "White Phosphorus Matches Prohibition Act"
+ RAJ_white_phosphorus_matches_prohibition_act_reward:0 "Modify '§YSocial Reforms§!' by:\nMonthly Population:§G +5.0%§!"
  
  # Survey of India
  RAJ_survey_of_india_category:0 "Survey of India"
@@ -852,7 +867,7 @@ RAJ_enlist_gurkhas_reward:0 "Modify '§YIndian Army§!' by:\nSpecial Forces Capa
 
 RAJ_ramp_up_military_budget:0 "Ramp-up Military Budget"
 RAJ_ramp_up_military_budget_desc:0 "The Indian Army is currently the costliest army in the world. It costs India 52 Pound per head, which is astonishingly high compared to the second costliest army in the world, the British Army at 21 Pound per head. In an effort to reduce our military expenditure in the long term, we will double it over the course of a year."
-RAJ_ramp_up_military_budget_reward:0 "Modify '§YIndian Army§!' by:\nConsumer Goods Factories factor:§Y -5.00%§!"
+RAJ_ramp_up_military_budget_reward:0 "Modify '§YIndian Army§!' by:\nConsumer Goods Factories factor:§Y -5.0%§!"
 
 RAJ_indianisation_of_the_officer_corps:0 "Indianisation of the Officer Corps"
 RAJ_indianisation_of_the_officer_corps_desc:0 ""
@@ -989,15 +1004,19 @@ RAJ_centralise_administrative_control_desc:0 ""
 
 RAJ_criminal_tribes_act:0 "Criminal Tribes Act"
 RAJ_criminal_tribes_act_desc:0 ""
+RAJ_criminal_tribes_act_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpower:§R -50§!\nMonthly Population:§R -5.0%§!\nConsumer Goods Factories Factor:§Y -3.0%§!\nCounter intelligence:§G +0.15§!\n\n"
 
 RAJ_introduce_vehicle_regulation:0 "Introduce Vehicle Regulations"
 RAJ_introduce_vehicle_regulation_desc:0 ""
 
 RAJ_indian_factories_act:0 "Indian Factories Act"
 RAJ_indian_factories_act_desc:0 ""
+RAJ_indian_factories_act_reward:0 "Modify '§YSocial Reforms§!' by:\nPolitical Power Gain:§G +10%§!\nFactory Output:§R -5.00%§!\n\n"
+RAJ_indian_factories_act_reward_2:0 "Add '§YSocial Reforms§!', which grants ( Political Power Gain:§G +10%§!, Factory Output:§R -5.00%§!).\n\n"
 
 RAJ_enact_social_regulations:0 "Enact Social Regulations"
 RAJ_enact_social_regulations_desc:0 ""
+RAJ_enact_social_regulations_reward:0 "\nUnlocks Decisions:\n§Y£GFX_decision_icon_small Cooperative Societies Act\n§Y£GFX_decision_icon_small Official Trustees Act\n§Y£GFX_decision_icon_small White Phosphorus Matches Prohibition Act\n"
 
 RAJ_government_of_india_act_1915:0 "Consolidate Indian Laws"
 RAJ_government_of_india_act_1915_desc:0 ""
@@ -1029,6 +1048,7 @@ delhi_capital:0 "New Delhi"
 
 RAJ_preservation_of_nature:0 "Preservation of Nature"
 RAJ_preservation_of_nature_desc:0 ""
+RAJ_preservation_of_nature_reward:0 "\nUnlocks Decisions:\n§Y£GFX_decision_icon_small Wilds Birds and Animals Protection Act\n£GFX_decision_icon_small Destructive Insects and Pests Act§!"
 
 RAJ_government_of_india_act_1912:0 "Reorganisation of Bengal"
 RAJ_government_of_india_act_1912_desc:0 ""
@@ -1051,6 +1071,7 @@ RAJ_ingress_into_india_ordinance_reward:0 "Completing this focus will §Ygreatly
 RAJ_defence_of_india_act:0 "Defence of India Act"
 RAJ_defence_of_india_act_desc:0 ""
 RAJ_defence_of_india_act_reward:0 "§RFailure to complete this focus two years into a war with Germany will result in a major Indian rebellion.§!\n\n"
+RAJ_defence_of_india_act_reward_2:0 "\nUnlocks Decisions:\n§Y£GFX_decision_icon_small Expand USA-Raj Cooperation\n£GFX_decision_icon_small Seize Assets of Seditious Individuals§!\n\n"
 
 RAJ_exploit_princely_ressources:0 "Exploit Princely Ressources"
 RAJ_exploit_princely_ressources_desc:0 ""
