--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4999,7 +4999,7 @@ ww1_romania.14.t:0 "PNL Announces Alliance with the PCD"
 ww1_romania.14.d:0 "With Carp rejecting the kings requests to reconcile the PCD, the PNL and PCD have announced an electoral coalition to oppose the PC. With this alliance, the tides have shifted against the PC and towards the PNL-PCD alliance. Although not ideal, we must remain confident about our chances next election. "
 ww1_romania.14.a:0 "They're desperate, clearly!"
 ww1_romania.13.t:0 "The Consensus of the Centre"
-ww1_romania.13.d:0 "The recent formation of the PC-PCD alliance has given the coalition a significant boost in the polls. While at first many predicted the race as a complete tossup, and some experts even seeing the election as leaning towards the PNL, the PC-PCD alliance has been gaining significant ground across the country. With the shift of the right towards the centre, peasants who were originally concerned the Conservatives would oppose new land reform have been softened, while many see the issues with the PNL and its corruption scandals."
+ww1_romania.13.d:0 "The recent formation of the PC-PCD alliance has given the coalition a significant boost in the polls. While at first many predicted the race as a complete-tossup, and some experts even seeing the election as leaning towards the PNL, the PC-PCD alliance has been gaining significant ground across the country. With the shift of the right towards the centre, peasants who were originally concerned the Conservatives would oppose new land reform have been softened, while many see the issues with the PNL and its corruption scandals."
 ww1_romania.13.a:0 "Its time to turn a new leaf!"
 ww1_romania.12.t:0 "Alexandru Marghiloman Proposes... Securing 'Election Security'"
 ww1_romania.12.d:0 "While the conservatives are the incumbents, theres still a reformist mood across much of country. Many political experts are calling the race a complete tossup, with some even saying the election leans towards the PNL. Another PNL government would be unacceptable, to say the least. Seeing the situation, Minister of the Interior Alexandru Marghiloman has proposed to Carp a way to secure our victory: tampering with the election. While of course not... morally great, it would indeed secure a win."
@@ -5199,7 +5199,9 @@ right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
 ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
+no_happy_few:0 "Has promised King that we won't pursue this policy"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
+
 ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
