geoylk is best tester btw

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5331,7 +5331,7 @@ ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead 
 ROM_for_country_side:0 "For the Country Side"
 ROM_for_country_side_desc:0 "While a solid majority of the conservative party is made up of elites from urban areas, we cannot leave the rural areas, where most of the country lives, behind. We must give them special attention and continue to support their development."
 ROM_investments_in_rural_education:0 "Mandatory Rural Education"
-ROM_investments_in_rural_education_desc:0 "Much of rural Romania due to many farmers simply being too busy or poor to recieve an education. We shall pass a law requiring citizens to go to school, to help fix this issue."
+ROM_investments_in_rural_education_desc:0 "Many people in rural Romania simply don't bother to recieve an education due to them prioritizing their time farming. This huge level of illiteracy cannot stand, and we should push through a law to mandate literary education."
 ROM_our_rural_base:0 "Pander to Our Rural Base"
 ROM_our_rural_base_desc:0 "We need to consolidate our support across the country to ensure we have popular support. We should increase our messaging across the rural Romania and pass some small scale laws to benefit them."
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
