--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5434,7 +5434,7 @@ ROM_austrian_support_withdraw.tt:0 "If we go to war with §YAustria§! the effec
 ROM_french_industry_support_withdrawn.tt:0 "We will §Rlose§! the civilian factory from the focus "§YFrench Industrial Support§!""
 ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!""
 ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
-ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus would have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
+ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
