SUSSY IM GOING TO RAPE YOU WHERE IS THE RAILWAY THING

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5411,7 +5411,7 @@ ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army:0 "Modify '§YRomanian Army§!' by:\n£army_experience Army Experience Gain: §G+0.03§!"
 ROM_army_org:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!"
 ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
-ROM_suprise.tt:0 "On the completion of the §YStrike West§! focus:\nGains '§YBite and Hold§!' which grants (£attacker_speed_texticon Division Speed: §G+35.00%§!, £organization_gain_texticon Army Organization Regain: §G+25.00%§!, Entrechment Speed: §G+50.00%§!) for §Y40§! days."
+ROM_suprise.tt:0 "On the completion of the §YTurn West§! focus:\nGains '§YBite and Hold§!' which grants (£attacker_speed_texticon Division Speed: §G+35.00%§!, £organization_gain_texticon Army Organization Regain: §G+25.00%§!, Entrechment Speed: §G+50.00%§!) for §Y40§! days."
 
 ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 
