--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8702,6 +8702,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.157.d: "Rome and its glory is the indomitable, perservering ambition that drives all men on Earth to aspire to.\n\nThe First Roman Empire had its glory days with Caesar, Augustus, Trajan and Aurelian.\n\nThe Second would last for a thousand years, led by such great ones as Justinian.\n\nThe Turks and the Russians would fight over the title of Third Rome, their rivalries creating in turn the forging of two great Empires.\n\nThe Germans, too, along with the French, had their own Roman experiment under Charlamagne which would last until Napoleon.\n\nBut there is room for yet more. Who is the most powerful empire on the planet? Surely not the Russians, the Turks, the Greeks, the Italians or the Germans. No. It is us! The British! And we now are in a position to declare a new, Anglican, Fifth Roman Empire under Caesar [ENG.GetLeader]!"
  ww1_england.157.a: "What a Childish Fantasy."
  ww1_england.157.b: "ROME LIVES!"
+lack_of_passion:0 "Lack of Passion"
  ww1_england.157.c: "Nothing better than the British empire."
  ww1_england.165.t: "Violation of the London Treaty"
  ww1_england.165.d: "[BEL.GetName] has violated the stipulations of the London Treaty by renouncing their neutrality and siding with a power bloc. Naturally, this wouldn't be an issue, if they had just sided with us, but that isn't the case. We should probably do something about this, as Belgium works as a fantastic base to attack directly from."
