--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5363,7 +5363,7 @@ ww1_romania.35.d:0 "As we work towards restoring decency and cooperation in our 
 ww1_romania.35.a:0 "We have every right to interfere in the press!"
 ww1_romania.35.b:0 "It's not worth the backlash"
 ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1.00%§!.\n\nBecause of our current §qFascist§! support, this focus will give:"
-ROM_reconcile_pcd:0 "Reconcile the PCD"
+ROM_reconcile_pcd:0 "Reconcile With the PCD"
 ROM_romania_for_those_who_earn_it_idea:0 "An Optimistic Romania "
 ROM_reconcile_pcd_desc:0 ""
 ROM_great_egoism:0 "Great Egoism"
