--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9318,6 +9318,9 @@ king_opinion_worse.tt:0 "The king's opinion of the current government will §Rwo
 ROM_kings_rotation_desc:0 "Romania's King prefers a 'rotation' between the 3 main parties of Romania, the §lPNL§!, the §mPCD§!, and the §cPC§!. As such, Romania's King generally loses confidence in the ruling government the longer it rules."
 the_great_communicator:0 "The Great Communicator"
  ROM_kings_country_category:0 "The Puppet Master"
+ROM_constantin_motru:0 "Constantin Montru"
+sociologist:0 "Sociologist"
+ ROM_titu_maiorescu:0 "Titu Maiorescu"
  ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nPolitical Power Gain: §R-20%§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nPolitical Power Gain: §R-10%§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nPolitical Power Gain: §Y+0%§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
 ROM_dncdna:0 "§CIrrelevent§! to the Politics of Romania, meaning we will recieve:\nPolitical Power Gain: §Y+00%§!\nStability: §Y+0.00%§!"
 ROM_king_view_complete_disapprove:0 "§RVery negative§!, which gives us:\nPower Gain: §R-20%§!\nStability: §R-12.00%§!"
