--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5369,6 +5369,8 @@ ROM_reconcile_pcd_desc:0 ""
 ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
+ROM_recruitment_campaigns:0 "We Need You!"
+ROM_recruitment_campaign:0 "Recruitment Campaign"
 ROM_german_support:0 "German Support"
 ROM_romanian_claims:0 "Romanian Claims"
 ROM_please_bucovina:0 "Ask For a Bukovina"
