--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5094,8 +5094,8 @@ ww1_romania.32.a:0 "Whatever."
 ww1_romania.38.t:0 "German Weapon Support Withdrawn"
 ww1_romania.38.a:0 "Whatever."
 ww1_romania.36.t:0 "A Shifting Coalition"
-ww1_romania.36.d:0 "."
-ww1_romania.36.a:0 "."
+ww1_romania.36.d:0 "In France, Russia, Austria, Germany, America, and the vast majority of countries, the political divide is best seen as a rural vs urban issues. Those in the urban areas are generally more liberal while those in rural areas are more conservative. In Romania, however, this is not the case. The rural areas have generally supported the liberal PNL, who has promised them much in the form of land reform, while those in the urban areas generally benefit from the PC's focus on education. With the appointment of Titu Maiorescu, coalitions are shifting once again. With Maiorescu's focus on rural issues, those who have often felt ignored by the elitist conservative PC have began to rethink their future votes. Although not a liberal, Maiorescu has unorthodox views on land reform for a conservative, which has helped shift the rural areas towards the PC. If Maiorescu can sucessfully sway rural Romania to the PC while mantaining strong support in urban areas, it's possible he could secure an electoral mandate for the next 100 years."
+ww1_romania.36.a:0 "We're going to make history!"
 ww1_romania.37.t:0 "Old Guard Concerned about our Reforms!"
 ww1_romania.37.d:0 ""
 ww1_romania.37.a:0 "Go through with them anyways."
