--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5215,8 +5215,8 @@ ww1_romania.27.a:0 "Loc writer do this later "
  ww1_romania.27.a: "Long live king Ferdinand."
 ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
 ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on sundays, is mostly inspired by Christs teachings. While Christains are free to follow this principle, it shouldn't be forced on everyone."
-pcd_leader:0 "Leader of the §mPCD§!"
-pcd_leader2:0 "Leader of the §mPCD§!"
+pcd_leader:0 "Member of the §mPCD§!"
+pcd_leader2:0 "Member of the §mPCD§!"
 ROM_a_voice_of_reason:0 "A Voice of Reason"
 ROM_a_voice_of_reason_desc:0 ""
 ROM_a_useful_ally:0 "A Useful Ally"
