proper anti-treaty side in irish civil war

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -951,6 +951,10 @@
  IRE_UK_democratic_DEF:0 "the Irish Free State"
  IRE_UK_neutrality:0 "Dominion of Ireland"
  IRE_UK_neutrality_DEF:0 "the Dominion of Ireland"
+ IRE_IRA_fascism:0 "Irish Republican Army"
+ IRE_IRA_fascism_DEF:0 "the Irish Republican Army"
+ IRE_IRA_neutrality:0 "Irish Republic"
+ IRE_IRA_neutrality_DEF:0 "the Irish Republic"
  POL_RED_neutrality:0 "Kingdom of Redania"
  POL_RED_neutrality_DEF:0 "the Kingdom of Redania"
  CHI_subject:0 "$OVERLORDADJ$ China"
