--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1765,6 +1765,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  IRE_patrick_pearse:0 "Pádraig Pearse"
  IRE_owen_duffy:0 "Eoin O'Duffy"
  IRE_tim_healy:0 "Tim Healy"
+ IRE_eamon_de_valera:0 "Éamon de Valera"
+ IRE_liam_lynch:0 "Liam Ó Loingsigh"
 
  # IRAQ
  IRQ_abdullah_i:0 "Abdullah I"
