Proper Persian Gendarmerie revolt

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -964,8 +964,8 @@
  PER_autonomy_colony_DEF:0 "the $OVERLORDADJ$ Persia"
  PER_autonomy_puppet_DEF:0 "the $OVERLORDADJ$ Persia"
  PER_autonomy_integrated_puppet_DEF:0 "the Mandate of Persia"
- PER_gendarmerie_fascism:0 "Persian Government Gendarmerie"
- PER_gendarmerie_fascism_DEF:0 "the Persian Government Gendarmerie"
+ PER_gendarmerie_fascism:0 "Provisional National Government of Persia"
+ PER_gendarmerie_fascism_DEF:0 "the Provisional National Government of Persia"
  TUR_autonomy_puppet_democratic:0 "Mandate of Turkey"
  TUR_autonomy_puppet_democratic_DEF:0 "the Mandatory of Turkey"
  HJZ_arabia:0 "Arabia"
