--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2547,13 +2547,13 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  # PERSIA
  PER_ahmad_shah_qajar:0 "Ahmad Shah Qajar"
- PER_persian_central_government:0 "Persian Central Government"
  PER_reza_khan:0 "Reza Khan"
  PER_abdollah_amir_tahmasebi:0 "Abdollah Amir Tahmasebi"
  PER_karim_buzarjomehri:0 "Karim Buzarjomehri"
  PER_mohammad_taqi_pessian:0 "Mohammad Taqi Pessian"
  PER_soleyman_eskandari:0 "Soleiman Eskandari"
  PER_mirza_kuchik_khan:0 "Mirza Kuchik Khan"
+ PER_nezam_us_saltaneh:0 "Nezam-us-Saltaneh"
 
  # THE PHILIPPINES
  PHI_manuel_luis_quezon:0 "Manuel Luis Quezón"
