Monopoly stuff setup

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -30,8 +30,8 @@
  RUS_state_council_election_tt: "Based on the current party popularities, we're expecting [RUS_state_council_election_winning_party] to be the dominant faction in the §YState Council§! after the election."
  RUS_likely_to_pass: "§GThe law is likely to pass§!"
  RUS_likely_to_be_rejected: "§RThe law is likely to be rejected§!"
- RUS_modify_state_council_tt: "Shifts §YFaction Balance§! to the [RUS_which_side_modify]"
- RUS_modify_state_council_big_tt: "Significantly shifts §YFaction Balance§! to the [RUS_which_side_modify]"
+ RUS_modify_state_council_tt: "Shifts §YFaction Balance§! in the §YState Council§! to the [RUS_which_side_modify]"
+ RUS_modify_state_council_big_tt: "§GSignificantly§! shifts §YFaction Balance§! in the §YState Council§! to the [RUS_which_side_modify]"
  RUS_left_side_tt: "§rLeft.§!"
  RUS_right_side_tt: "§qRight.§!"
  RUS_cant_shift_100_tt: "You can shift until §Yhuge level§! of right-wing power."
@@ -243,6 +243,8 @@
  RUS_significant_illiteracy: "Significant Illiteracy"
  RUS_moderate_illiteracy: "Moderate Illiteracy"
  RUS_slight_illiteracy: "Slight Illiteracy"
+ RUS_monopolistic_capitalism: "Monopolistic Capitalism"
+ RUS_natural_monopolies: "Natural Monopolies"
  RUS_jewish_question: "Jewish Question"
  RUS_jewish_question_desc: "After the Partitions of Poland, besides the majority slavic regions of Belarus and Ukraine, Russia has aquired territories with a sizeable Jewish minority. Ever since then, life of Jewish people in Russia has been pretty hard - restrictions of the government alongside antisemitic pogroms force them to either leave the country or join various revolutionary groups and fight for their rights."
  RUS_authoritarian_zemstvo: "Authoritarian Zemstvo"
