District of Columbia

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1030,6 +1030,7 @@
  STATE_1029: "Rakka"
  STATE_1030: "Amasya"
  STATE_1031: "Sinop"
+ STATE_1032: "District of Columbia"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
