--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -637,6 +637,7 @@
  VICTORY_POINTS_12687: "Targu Ocna"
  VICTORY_POINTS_711: "Gheorgheni"
  VICTORY_POINTS_3649: "Resita"
+ VICTORY_POINTS_8185: "Annapolis"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
