sal's changes to improve romania

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5241,12 +5241,12 @@ ROM_take_ionescu:0 "Take Ionsecu"
  ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reforms and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing."
 ROM_from_the_top_down:0 "Encourage Foreign Investment"
 ROM_from_the_top_down_desc:0 "The peasant class will do best when the economy does best. We need to continue industrialization, to create more low skill, medium pay factory jobs for the population. To do this, we should offer lucrative tax cuts to foreign companies wishing to invest in romania."
-ROM_land_reform_pass:0 "Land Reform Bill has Passed"
-ROM_land_reform_fail:0 "Land Reform Bill has Failed"
+ROM_land_reform_pass:0 "§YLand Reform Bill§! has §GPassed§!"
+ROM_land_reform_fail:0 "§YLand Reform Bill§! has §RFailed§!"
 land_reform_fail:0 "The land reform bill will §Rnot§! pass"
 ROM_bratianu_resign:0 "Bratianus' Resignation"
 ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land reform bill has proven to the king that the liberals have governed for long enough, and that its time for another party to bring a fresh face to governance. Lets have Bratianu resign, and have the conservative PC form a government."
-on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify '§YUnfinished Land Reform§!' by:\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!"
+on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify §YUnfinished Land Reform§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!\n\n"
 ROM_king_carols_reign:0 "King Carol's Reign"
 ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, has lead us well so far. With his great wisdom, Romania has gone from a rump puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
@@ -5282,6 +5282,7 @@ ROM_lessons_from_prussian_desc:0 ""
 ROM_french_russian_attache:0 "Franco-Russian Attaché"
 ROM_french_russian_attache_desc:0 ""
 ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
+ROM_lessons_from_balkan_wars_tt:0 "One of the following must be true:\n   Has had a war with §Y[BUL.GetFlag][BUL.GetName]§!\n   Has had a war with §Y[TUR.GetFlag][TUR.GetName]§!\n   Has had a war with §Y[SER.GetFlag][SER.GetName]§!\n   Has had a war with §Y[MNT.GetFlag][MNT.GetName]§!\n   Has had a war with §Y[GRE.GetFlag][GRE.GetName]§!"
 ROM_lessons_from_balkan_wars_desc:0 "" 
 ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
@@ -5341,8 +5342,8 @@ ROM_invest_in_romania_steel_industry:0 "Roll Back Land Reform"
 ROM_invest_in_romania_steel_industry_desc:0 ""
 ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
-ROM_austia_military_research:0  "Military Cooperation with Austria-Hungary"
-ROM_austia_military_research_desc:0 ""
+ROM_military_cooperation_with_austria:0  "Military Cooperation with Austria-Hungary"
+ROM_military_cooperation_with_austria_desc:0 ""
 ROM_krupp_weapon_purchases:0 "Krupp Weapon Purchases"
 ROM_krupp_weapon_purchases_desc:0 ""
 ROM_crush_the_protesters:0 "Declare a State of Emergency"
@@ -5411,18 +5412,18 @@ ROM_reclamation_of_bessarabia:0 "Liberation of Bessarabia"
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
-modify_rom_army:0 "Modify '§YRomanian Army§!' by:\n£army_experience Army Experience Gain: §G+0.03§!"
-ROM_army_org:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!"
-ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
-ROM_suprise.tt:0 "On the completion of the §YTurn West§! focus:\nGains '§YBite and Hold§!' which grants (£attacker_speed_texticon Division Speed: §G+35.00%§!, £organization_gain_texticon Army Organization Regain: §G+25.00%§!, Entrechment Speed: §G+50.00%§!) for §Y40§! days."
+modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
+ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n\n"
+ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
+ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\n"
 
-ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
+ROM_adapt_to_times.tt:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 
-ROM_ttyg:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!"
-ROM_reorg_army.tt:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
+ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
+ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 
-ROM_adapt_times.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+10.00%§!"
-ROM_for_truth.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
+ROM_adapt_times.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n\n"
+ROM_for_truth.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 member_of_pc:0 "Member of §cPC§!"
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
