--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2825,15 +2825,29 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_influence_of_the_church:0 "Influence of the Church"
  ROM_corruption_purges:0 "Corruption purges"
  ROM_balance_budget:0 "Budget Balancing"
+ ROM_bite_and_hold:0 "Bite and Hold"
+ ROM_research_investments:0 "Research Investments"
  ROM_blue_law_overturned:0 "Overturned Blue Law"
  ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
+ ROM_welcome_anglo_italian_banks_idea_instant_desc:0 "§RThis idea will be removed if we go to war with United Kingdom§!"
  ROM_influx_of_western_intellectuals_idea:0 "Influx of Western Intellectuals"
  ROM_aristocratic_romania_idea:0 "An Aristocratic Romania"
- ROM_king_disaprove_idea:0 "The King's Opinion"
- ROM_king_disaprove_idea_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romania's king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romania's public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda."
+ ROM_carol_i_idea:0 "The King's Opinion"
+ ROM_carol_i_idea_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romania's king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romania's public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to extreme measures. In addition, if the king approves of our government, they may use their political clout to help push our agenda."
  ROM_unfinished_land_reform:0 "Unfinished Land Reform"
  ROM_unfinished_land_reform_desc:0 ""
  ROM_concessions_to_muslim_romanians_idea:0 "Concessions to Muslim Romanians"
+ ROM_king_heavy_approve_2:0 "The King's Opinion"
+ ROM_king_approve_2:0 "The King's Opinion"
+ ROM_king_heavy_approve:0 "The King's Opinion"
+ ROM_king_approve:0 "The King's Opinion"
+ ROM_king_neutral:0 "The King's Opinion"
+ ROM_king_disaprove:0 "The King's Opinion"
+ ROM_king_heavy_disaprove:0 "The King's Opinion"
+ ROM_german_industrial_aid:0 "German Industrial Aid"
+ ROM_german_industrial_aid_instant_desc:0 "§RThis idea will be removed if we go to war with Germany§!"
+ ROM_french_industrial_aid:0 "French Industrial Aid"
+ ROM_french_industrial_aid_instant_desc:0 "§RThis idea will be removed if we go to war with France§!"
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
