--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5329,11 +5329,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_conscription_in_karak_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n\n"
  TUR_conscription_in_karak_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n\n"
  TUR_conscription_in_karak_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n\n"
+ TUR_settle_bedouin_tribes_tt:0 "Does not have national spirit §YBedouin Support§!\n"
  TUR_increase_damascus_centralization_5:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §G+5%§!\n\n"
  TUR_truce_with_asir:0 "Truce With Asir"
  TUR_truce_with_asir_desc:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. As foreign wars seem imminent, we may have to have truce with them."
  TUR_truce_with_asir_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-80%§!\n\n"
  TUR_decrease_yemen_centralization_5:0 "Modify §YCentralization§! of §YYemen Vilayet§! by §R-5%§!\n"
+ TUR_increase_deir_ez_zor_centralization_20:0 "Modify §YCentralization§! of §YDeir ez-Zor Vilayet§! by §G+20%§!\n"
  TUR_establish_order_in_macedonia:0 "Esrablish Order in [FROM.GetName]"
  TUR_establish_order_in_macedonia_desc:0 "[FROM.GetName] in the Macedonian region has been experiencing violence among Greek, Bulgarian and Turkish residents. By deploying the army in the region, we can combat violence and establish order."
  TUR_establish_order_in_macedonia_tt:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\nModify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n\n"
@@ -5833,6 +5835,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_give_citizenship_to_jews:0 "Give Citizenship to Jews"
  TRS_give_citizenship_to_jews_desc:0 "Numerous Jews living within our empire are not a citizen of our empire. In an effort to integrate Jews in our empire, we can offer jews Ottoman citizenship."
  TUR_seized_railway:0 "Seized Railway"
+ TUR_increase_beirut_centralization_05:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+5%§!\n"
  TUR_increase_beirut_centralization_15:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+15%§!\n"
  TUR_increase_jerusalem_centralization_20:0 "Modify §YCentralization§! of §YJerusalem Vilayet§! by §G+20%§!\n"
  TRS_arabist_movement:0 "Arabist Movement"
