--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5080,13 +5080,16 @@
  TUR_integrate_jewish_colonies_tt2:0 "Unlocks £decision_icon_small  §YGive Citizenship to Jews§! Decisions.\n"
  TUR_ottoman_state_in_syria_tt:0 "\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
  TUR_censor_the_opposition_tt:0 "Unlocks £decision_icon_small  §YBan Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
+ TUR_settle_arab_tribes_tt:0 "Unlocks £decision_icon_small  §YSettle Druze Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Bedouin Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Deir ez-Zor Tribes§! Decisions.\n"
  diplomatic_incident:0 "Diplomatic Incident"
+ TUR_nationalize_railways_tt:0 "If at war with §Y[FRA.GetName]§!, these decisions will be replaced and we'll be able to §Yseize§! mentioned §Yrailways§! and §Yports§! without paying a price.\n"
  TRS_arab_opposition_no_effect:0 "§YArab Opposition§! has negative modifiers on our nation\n"
  TRS_add_1_oppression_justification_for_every_major_at_war:0 "Adds §Y1§! Oppression Justification for every §Ymajor§! we're at §Ywar§! with."
  TUR_frame_disloyal_elements_tt:0 "This decision will add §Y1§! Oppression Justification.\n\n"
  TUR_punishment_for_traitors_tt:0 "These decisions will §Ydecrease§! Arab opposition.\n"
  TUR_reward_and_persuasion_tt:0 "Effects when hired:\n"
- TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation\n"
+ TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation.\n"
+ TUR_remove_arab_opposition_tt:0 "Remove §YArab Opposition§!.\n"
  TUR_ottoman_fourth_army:0 "Ottoman Fourth Army"
  TUR_ottoman_fourth_army_desc:0 "Ahmed Cemâl Paşa has been sent to Syria with the intention of centralizing and reforming the region. Apart from this mission, his second role in the region is to organize the 4th Ottoman army and defend the provinces against foreign invasions. As Cemâl Paşa step foot on the territory, it seemed that significant reforms would be required to reorganize the army."
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
