--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5081,6 +5081,7 @@
  TUR_ottoman_state_in_syria_tt:0 "\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
  TUR_censor_the_opposition_tt:0 "Unlocks £decision_icon_small  §YBan Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
  TUR_settle_arab_tribes_tt:0 "Unlocks £decision_icon_small  §YSettle Druze Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Bedouin Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Deir ez-Zor Tribes§! Decisions.\n"
+ TUR_the_ideal_province_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n"
  diplomatic_incident:0 "Diplomatic Incident"
  TUR_nationalize_railways_tt:0 "If at war with §Y[FRA.GetName]§!, these decisions will be replaced and we'll be able to §Yseize§! mentioned §Yrailways§! and §Yports§! without paying a price.\n"
  TRS_arab_opposition_no_effect:0 "§YArab Opposition§! has negative modifiers on our nation\n"
