more greek dynamic renaming

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1070,6 +1070,8 @@
  OLYMPOS_STATE: "Olympos"
  YANNENA_STATE: "Ioannina"
  PANORMOS_STATE: "Panormos"
+ METRAI_STATE: "Metrai"
+ NICOMEDIA_STATE:0 "Nicomedia"
  SMYRNI_STATE: "Smyrni"
  MYLASA_STATE: "Mylasa"
  SOLUN_STATE: "Solun"
